Fixed main page overflowing style.

--- a/root/css/main.css
+++ b/root/css/main.css
@@ -16,6 +16,7 @@
 
 body {
   min-height: 100vh;
+  max-width: 100vw;
   margin: 0;
   display: flex;
   flex-direction: column;
